fix(style): last cell in subtable too small
* remove width on last `.subtable` column
* add `.action` class for column headers
  * updated styleguide to account for this change

--- a/src/rxApp/common.less
+++ b/src/rxApp/common.less
@@ -105,6 +105,9 @@ table {
         background: @tableHeaderBg;
         color: @tableHeaderText;
         border: 1px solid @tableHeaderBorder;
+        &.actions {
+          width: 15px;
+        }
     }
     tr {
         background: @tableBg;
@@ -153,7 +156,6 @@ table {
 
         th:last-child {
             border-right-width: 0;
-            width: 15px;
         }
 
         th {
